chore: fix crowdin config
Signed-off-by: Harmony <19539165+BitsOfAByte@users.noreply.github.com>

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -3,4 +3,4 @@ files:
     translation: /%original_path%/Strings.%two_letters_code%.resx
 pull_request_title: 'chore(i10n): Translation updates (Crowdin)'
 commit_message: 'chore(i10n): translations updates for %original_file_name% [skip ci]'
-append_commit_message: 
+append_commit_message: true
