--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,6 +1,6 @@
 files:
-  - source: /KikoGuide/Resources/Localization/*.resx
+  - source: /KikoGuide/Resources/Localization/Strings.resx
     translation: /%original_path%/Strings.%two_letters_code%.resx
 pull_request_title: 'chore(i10n): Translation updates (Crowdin)'
 commit_message: 'chore(i10n): translations updates for %original_file_name% [skip ci]'
-append_commit_message: true
+append_commit_message: 1
