--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Sirensong"]
 	path = Sirensong
-	url = https://github.com/BitsOfAByte/Sirensong.git
+	url = https://github.com/Blooym/Sirensong.git
